--- a/e2e/.env
+++ b/e2e/.env
@@ -1,3 +1,3 @@
 AEM_HOST_URI=http://localhost:4502
-AEM_GRAPHQL_ENDPOINT=/content/graphql/endpoint.gql
-AEM_AUTHORIZATION=admin:admin
+AEM_USER=admin
+AEM_PASS=admin
