--- a/package.json
+++ b/package.json
@@ -27,17 +27,18 @@
     "jsdoc-to-markdown": "^6.0.1",
     "stdout-stderr": "^0.1.13"
   },
-  "homepage": "https://github.com/adobe/graphql-sdk",
+  "homepage": "https://github.com/adobe/aem-headless-sdk",
   "license": "Apache-2.0",
   "main": "src/index.js",
-  "name": "@adobe/graphql-sdk",
+  "name": "@adobe/aem-headless-sdk",
   "repository": "https://github.com/adobe/aem-headless-sdk",
   "scripts": {
     "docs": "jsdoc2md -t ./docs/readme_template.md src/index.js > README.md",
     "lint": "eslint src test",
     "unit-tests": "jest --config test/jest.config.js --maxWorkers=2",
     "test": "npm run lint && npm run unit-tests",
-    "e2e": "jest --config e2e/jest.config.js"
+    "e2e": "jest --config e2e/jest.config.js",
+    "tr": "node e2e/tr.js"
   },
   "publishConfig": {
     "access": "public"
