--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   },
   "bundleDependencies": false,
   "dependencies": {
-    "@adobe/aemcs-api-client-lib": "file:aemcs-api-client-lib/nodejs",
+    "@adobe/aemcs-api-client-lib": "git+https://github.com/adobe/aemcs-api-client-lib.git#main",
     "cross-fetch": "^3.0.6"
   },
   "deprecated": false,
