--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "description": "AEM Headless SDK Client",
   "devDependencies": {
     "@adobe/eslint-config-aio-lib-config": "^1.2.1",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^8.2.0",
     "eslint": "^7.18.0",
     "eslint-config-standard": "^16.0.2",
@@ -32,7 +33,7 @@
   "name": "@adobe/aem-headless-client-js",
   "repository": "https://github.com/adobe/aem-headless-client-js",
   "scripts": {
-    "docs": "jsdoc2md -t ./docs/readme_template.md src/main.js > api-reference.md",
+    "docs": "jsdoc2md --no-gfm -t ./docs/readme_template.md src/index.js > api-reference.md",
     "lint": "eslint src test",
     "unit-tests": "jest --config test/jest.config.js --maxWorkers=2 --verbose",
     "test": "npm run lint && npm run unit-tests",
