--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["@adobe/eslint-config-aio-lib-config"]
+  "extends": ["@adobe/eslint-config-aio-lib-config"],
+  "rules": {
+    "jsdoc/check-tag-names": [
+      "error",
+      {
+        "definedTags": ["jest-environment"]
+      }
+    ]
+  }
 }
