--- a/package.json
+++ b/package.json
@@ -45,5 +45,11 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "version": "2.0.0"
+  "version": "2.0.0",
+  "files": [
+    "/src",
+    "api-reference.md",
+    "CODE_OF_CONDUCT.md",
+    "COPYRIGHT"
+  ]
 }
