--- a/.github/workflows/version-bump-publish.yml
+++ b/.github/workflows/version-bump-publish.yml
@@ -10,20 +10,25 @@ on:
         description: 'The tag to publish to.'
         required: false
         default: 'latest'
+      dryRun:
+        description: 'Test with --dry-run'
+        type: boolean
+        default: true
+
 jobs:
   checkout:
     name: checkout
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-      - uses: actions/setup-node@v1
+      - uses: actions/setup-node@v3
         with:
           node-version: 16
       - run: |
-          npm install
+          npm ci
           npm test
       - name: bump and pub
         if: ${{ github.event.inputs.level != '' }}
@@ -33,5 +38,6 @@ jobs:
       - uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.ADOBE_BOT_NPM_TOKEN }}
+          dry-run: ${{ github.event.inputs.dryRun }}
           tag: ${{ github.event.inputs.tag }}
           access: 'public'
