--- a/package.json
+++ b/package.json
@@ -5,24 +5,6 @@
   "bundleDependencies": false,
   "deprecated": false,
   "description": "AEM Headless SDK Client",
-  "devDependencies": {
-    "@adobe/eslint-config-aio-lib-config": "^1.2.1",
-    "cross-fetch": "^3.1.5",
-    "dotenv": "^10.0.0",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-jsdoc": "^21.0.0",
-    "eslint-plugin-node": "^10.0.0",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-standard": "^4.1.0",
-    "jest": "^27.0.4",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^12.1.0",
-    "jsdoc-to-markdown": "^7.0.1",
-    "stdout-stderr": "^0.1.13"
-  },
   "homepage": "https://github.com/adobe/aem-headless-client-js",
   "license": "Apache-2.0",
   "main": "src/index.js",
@@ -50,5 +32,25 @@
   "version": "3.1.1",
   "dependencies": {
     "@adobe/aio-lib-core-errors": "^3.1.1"
+  },
+  "devDependencies": {
+    "@adobe/eslint-config-aio-lib-config": "^2.0.0",
+    "cross-fetch": "^3.1.5",
+    "dotenv": "^16.0.3",
+    "eslint": "^8.29.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-jsdoc": "^37.9.7",
+    "eslint-plugin-n": "^15.6.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
+    "jest-fetch-mock": "^3.0.3",
+    "jest-junit": "^15.0.0",
+    "jsdoc-to-markdown": "^8.0.0",
+    "stdout-stderr": "^0.1.13",
+    "typescript": "^4.9.4"
   }
 }
