#25 move static methods to utils

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
   "extends": ["@adobe/eslint-config-aio-lib-config"],
   "rules": {
+    "jsdoc/no-undefined-types": 0,
     "jsdoc/check-tag-names": [
       "error",
       {
