--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "bugs": {
     "url": "https://github.com/adobe/aem-headless-client-js/issues"
   },
-  "bundleDependencies": false,
   "deprecated": false,
   "description": "AEM Headless SDK Client",
   "homepage": "https://github.com/adobe/aem-headless-client-js",
@@ -22,7 +21,7 @@
     "access": "public"
   },
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=20.0.0"
   },
   "files": [
     "/src",
@@ -31,26 +30,17 @@
     "COPYRIGHT"
   ],
   "dependencies": {
-    "@adobe/aio-lib-core-errors": "^3.1.1"
+    "@adobe/aio-lib-core-errors": "4.0.1"
   },
   "devDependencies": {
-    "@adobe/eslint-config-aio-lib-config": "^2.0.0",
-    "cross-fetch": "^3.1.5",
-    "dotenv": "^16.0.3",
-    "eslint": "^8.29.0",
-    "eslint-config-standard": "^17.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^23.20.0",
-    "eslint-plugin-jsdoc": "^37.9.7",
-    "eslint-plugin-n": "^15.6.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.1.1",
-    "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1",
-    "jest-fetch-mock": "^3.0.3",
-    "jest-junit": "^15.0.0",
-    "jsdoc-to-markdown": "^8.0.0",
-    "stdout-stderr": "^0.1.13",
-    "typescript": "^4.9.4"
+    "@adobe/eslint-config-aio-lib-config": "4.0.0",
+    "cross-fetch": "4.0.0",
+    "dotenv": "16.4.5",
+    "jest": "29.7.0",
+    "jest-environment-jsdom": "29.7.0",
+    "jest-fetch-mock": "3.0.3",
+    "jest-junit": "16.0.0",
+    "jsdoc-to-markdown": "8.0.1",
+    "stdout-stderr": "0.1.13"
   }
 }
