--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,6 +2,7 @@
   "extends": ["@adobe/eslint-config-aio-lib-config"],
   "rules": {
     "jsdoc/no-undefined-types": 0,
+    "jsdoc/no-defaults": 0,
     "jsdoc/check-tag-names": [
       "error",
       {
